update tela inicial de usuario, barra lateral, header + responsividade

--- a/homeCliente/index.html
+++ b/homeCliente/index.html
@@ -21,60 +21,63 @@
         <cabeca-padrao></cabeca-padrao>
     </header>
     <main>
-        <div style="width: 15%;">
+        <div style="width: 15%; padding-top: 2%;">
             <lateral-padrao></lateral-padrao>
         </div>
-        <div class="tabela">
-            <table id="table-user">
-                <tr>
-                    <th class="item-title">ID</th>
-                    <th class="item-title">Data/Hora</th>
-                    <th class="item-title">Descricao</th>
-                    <th class="item-title">Estado</th>
-                    <th class="item-title">Visualizar Situação</th>
-                    <th class="item-title">Ação</th>
-                </tr>
-                <tr>
-                    <td class="item">teste</td>
-                    <td class="item">teste</td>
-                    <td class="item">teste</td>
-                    <td class="item">teste</td>
-                    <td class="item">teste</td>
-                    <td class="item">teste</td>
-                </tr>
-                <tr>
-                    <td class="item">teste</td>
-                    <td class="item">teste</td>
-                    <td class="item">teste</td>
-                    <td class="item">teste</td>
-                    <td class="item">teste</td>
-                    <td class="item">teste</td>
-                </tr>
-                <tr>
-                    <td class="item">teste</td>
-                    <td class="item">teste</td>
-                    <td class="item">teste</td>
-                    <td class="item">teste</td>
-                    <td class="item">teste</td>
-                    <td class="item">teste</td>
-                </tr>
-                <tr>
-                    <td class="item">teste</td>
-                    <td class="item">teste</td>
-                    <td class="item">teste</td>
-                    <td class="item">teste</td>
-                    <td class="item">teste</td>
-                    <td class="item">teste</td>
-                </tr>
-                <tr>
-                    <td class="item">teste</td>
-                    <td class="item">teste</td>
-                    <td class="item">teste</td>
-                    <td class="item">teste</td>
-                    <td class="item">teste</td>
-                    <td class="item">teste</td>
-                </tr>
-            </table>
+        <div class="main-content">
+            <h3>Minhas solicitações</h3>
+            <div class="tabela">
+                <table id="table-user">
+                    <tr>
+                        <th class="item-title">ID</th>
+                        <th class="item-title">Data/Hora</th>
+                        <th class="item-title">Descricao</th>
+                        <th class="item-title">Estado</th>
+                        <th class="item-title">Visualizar Situação</th>
+                        <th class="item-title">Ação</th>
+                    </tr>
+                    <tr>
+                        <td class="item">teste</td>
+                        <td class="item">teste</td>
+                        <td class="item">teste</td>
+                        <td class="item">teste</td>
+                        <td class="item">teste</td>
+                        <td class="item">teste</td>
+                    </tr>
+                    <tr>
+                        <td class="item">teste</td>
+                        <td class="item">teste</td>
+                        <td class="item">teste</td>
+                        <td class="item">teste</td>
+                        <td class="item">teste</td>
+                        <td class="item">teste</td>
+                    </tr>
+                    <tr>
+                        <td class="item">teste</td>
+                        <td class="item">teste</td>
+                        <td class="item">teste</td>
+                        <td class="item">teste</td>
+                        <td class="item">teste</td>
+                        <td class="item">teste</td>
+                    </tr>
+                    <tr>
+                        <td class="item">teste</td>
+                        <td class="item">teste</td>
+                        <td class="item">teste</td>
+                        <td class="item">teste</td>
+                        <td class="item">teste</td>
+                        <td class="item">teste</td>
+                    </tr>
+                    <tr>
+                        <td class="item">teste</td>
+                        <td class="item">teste</td>
+                        <td class="item">teste</td>
+                        <td class="item">teste</td>
+                        <td class="item">teste</td>
+                        <td class="item">teste</td>
+                    </tr>
+                </table>
+            </div>
         </div>
     </main>
 </body>
