update barra lateral + itens tabela + ligacao com a tela menu

--- a/homeCliente/index.html
+++ b/homeCliente/index.html
@@ -33,50 +33,44 @@
                         <th class="item-title">Data/Hora</th>
                         <th class="item-title">Descricao</th>
                         <th class="item-title">Estado</th>
-                        <th class="item-title">Visualizar Situação</th>
                         <th class="item-title">Ação</th>
                     </tr>
                     <tr>
-                        <td class="item">teste</td>
-                        <td class="item">teste</td>
-                        <td class="item">teste</td>
-                        <td class="item">teste</td>
-                        <td class="item">teste</td>
-                        <td class="item">teste</td>
+                        <td class="item">001</td>
+                        <td class="item">15/09/24 10:00</td>
+                        <td class="item">Equipamento A com falha...</td>
+                        <td class="item">ORÇADA</td>
+                        <td class="item">
+                            <button onclick="mostrarOrcamento()">Aprovar/Rejeitar Serviço</button>
+                        </td>
                     </tr>
                     <tr>
-                        <td class="item">teste</td>
-                        <td class="item">teste</td>
-                        <td class="item">teste</td>
-                        <td class="item">teste</td>
-                        <td class="item">teste</td>
-                        <td class="item">teste</td>
+                        <td class="item">002</td>
+                        <td class="item">14/09/24 09:30</td>
+                        <td class="item">Equipamento B com defeito...</td>
+                        <td class="item">APROVADA</td>
+                        <td class="item"></td>
                     </tr>
                     <tr>
-                        <td class="item">teste</td>
-                        <td class="item">teste</td>
-                        <td class="item">teste</td>
-                        <td class="item">teste</td>
-                        <td class="item">teste</td>
-                        <td class="item">teste</td>
+                        <td class="item">003</td>
+                        <td class="item">13/09/24 08:45</td>
+                        <td class="item">Equipamento C reiniciando...</td>
+                        <td class="item">REJEITADA</td>
+                        <td class="item">
+                            <button onclick="resgatarServico()">Resgatar Serviço</button>
+                        </td>
                     </tr>
                     <tr>
-                        <td class="item">teste</td>
-                        <td class="item">teste</td>
-                        <td class="item">teste</td>
-                        <td class="item">teste</td>
-                        <td class="item">teste</td>
-                        <td class="item">teste</td>
-                    </tr>
-                    <tr>
-                        <td class="item">teste</td>
-                        <td class="item">teste</td>
-                        <td class="item">teste</td>
-                        <td class="item">teste</td>
-                        <td class="item">teste</td>
-                        <td class="item">teste</td>
+                        <td class="item">004</td>
+                        <td class="item">12/09/24 11:15</td>
+                        <td class="item">Equipamento D sem energia...</td>
+                        <td class="item">ARRUMADA</td>
+                        <td class="item">
+                            <button onclick="pagarServico()">Pagar Serviço</button>
+                        </td>
                     </tr>
                 </table>
+                
             </div>
         </div>
     </main>
