--- a/login/index.html
+++ b/login/index.html
@@ -1,50 +1,76 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nome do Site</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="../pattern.css">
-    <link rel="stylesheet" href="./style.css">
-    
+    <link rel="stylesheet" href="./style2.css">
+
 </head>
+
 <body>
     <header>
         <div id="icon"></div>
+
         <div id="login-container">
-            <div id="register">Registrar</div>
-            <div id="login">Entrar</div>
+            <div id="register" href="/frontend-Pedro-Henrique-Lopes/login/register.html">Registrar</div>
+
         </div>
     </header>
+
     <main>
+        <div id="grid-2">
+            <div id="container">
+                <div id="login-form">
+                    <h1>Entrar</h1>
+                    <form action="">
+                        <p>Digite seu email</p>
+                        <input type="text" name="email" id="email" placeholder="E-mail">
+                        <p>Digite sua senha</p>
+                        <input type="password" name="password" id="password" placeholder="Senha">
+                        <p id="Fpassowrd">Esqueci minha senha</p>
+                        <button type="submit">Entrar</button>
+                    </form>
+                </div>
+            </div>
 
-        <div id="login-form">
-            <h1>Entrar</h1>
-            <form action="">
-                <input type="text" name="email" id="email" placeholder="E-mail">
-                <input type="password" name="password" id="password" placeholder="Senha">
-                <button type="submit">Entrar</button>
-            </form>
-        </div>
 
-        <div id="register-form">
-            <h1>Registrar</h1>
-            <form action="">
-                <input type="text" name="name" id="name" placeholder="Nome">
-                <input type="text" name="email" id="email" placeholder="E-mail">
-                <input type="password" name="password" id="password" placeholder="Senha">
-                <input type="password" name="password" id="password" placeholder="Confirmar Senha">
-                <button type="submit">Registrar</button>
-            </form>
 
-        </div>
+
+            <div id="container">
+                <div id="login-form">
+                    <h1>Registrar</h1>
+                    <form action="">
+                        <p>Digite seu nome</p>
+                        <input type="text" name="name" id="name" placeholder="Nome">
+                        <p>Digite seu email</p>
+                        <input type="text" name="email" id="email" placeholder="E-mail">
+                        <p>Digite sua senha</p>
+                        <input type="password" name="password" id="password" placeholder="Senha">
+                        <p>Confirme sua senha</p>
+                        <input type="password" name="password" id="password" placeholder="Confirmar Senha">
+                        <button type="submit">Registrar</button>
+                    </form>
+
+                </div>
+            </div>
+
+
+
+
+
 
     </main>
     <footer>
         <div id="developers">Desenvolvido por <span>Nome da Equipe</span>.</div>
     </footer>
 </body>
+
 </html>
