--- a/login/register/index.html
+++ b/login/register/index.html
@@ -42,7 +42,7 @@
                     <input type="text" name="city" id="city" placeholder="Cidade">
                 </div>
                 <input type="text" name="address" id="address" placeholder="Endereço">
-                <button type="submit">Registrar</button>
+                <button type="submit" id="register-button">Registrar</button>
             </form>
 
         </div>
