--- a/maintenance/index.html
+++ b/maintenance/index.html
@@ -35,6 +35,7 @@
 
                 <button>Enviar</button>
             </form>
+            <button onclick="history.back()">Voltar</button>
         </div>
     </main>
     <footer>
