routes + login + register + style.css

--- a/login/register/index.html
+++ b/login/register/index.html
@@ -12,14 +12,14 @@
         rel="stylesheet">
     <link rel="stylesheet" href="../../pattern.css">
     <link rel="stylesheet" href="./style.css">
-    <script src="./script.js" defer></script>
+    <!-- <script src="./script.js" defer></script> -->
 </head>
 
 <body>
     <header>
         <div id="icon"></div>
         <div id="login-container">
-            <div id="register">Entrar</div>
+            <a href="../"><div id="register">Entrar</div></a>
         </div>
     </header>
     <main>
@@ -42,7 +42,7 @@
                     <input type="text" name="city" id="city" placeholder="Cidade">
                 </div>
                 <input type="text" name="address" id="address" placeholder="Endereço">
-                <button type="submit" id="register-button">Registrar</button>
+                <a href="../../homeCliente/"><button type="button" id="register-button">Registrar</button></a>
             </form>
 
         </div>
