mudanças login + register

--- a/login/index.html
+++ b/login/index.html
@@ -44,14 +44,7 @@
             <div class="container">
                 <h1>Registrar</h1>
                 <form action="">
-                    <div class="field">
-                        <label>Digite seu nome:</label>
-                        <input type="text" name="name" id="name" placeholder="Nome">
-                    </div>
-                    <div class="field">
-                        <label>Digite seu email:</label>
-                        <input type="text" name="email" id="email" placeholder="E-mail">
-                    </div>
+                    <p>Se você ainda não tem uma conta, clique no botão abaixo para se registrar.</p>
                     <a href="./register/"><button type="button">Registrar</button></a>
                 </form>
             </div>
