correção categoria dos equipamentos

--- a/maintenance/index.html
+++ b/maintenance/index.html
@@ -21,10 +21,13 @@
                 <label for="equipment-category">Categoria do equipamento</label>
                 <select id="categoria" class="dropdown">
                     <option value="" disabled selected>Selecione uma categoria</option>
-                    <option value="eletrico">Equipamento Elétrico</option>
-                    <option value="hidraulico">Equipamento Hidráulico</option>
-                    <option value="mecanico">Equipamento Mecânico</option>
-                    <option value="outros">Outros</option>
+                    <option value="eletrico">Desktop</option>
+                    <option value="hidraulico">Notebook</option>
+                    <option value="mecanico">Impressora</option>
+                    <option value="mecanico">Mouse</option>
+                    <option value="outros">Teclado</option>
+                    <option value="mecanico">Outros</option>
+
                 </select>
 
                 <label for="defect-description">Descrição do defeito </label>
