[ADD] pagina de orcamento + aprovar + rejeitar

--- a/homeCliente/index.html
+++ b/homeCliente/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./style/style.css">
     <script src="./src/components/Header.js" defer></script>
     <script src="./src/components/NavBar.js" defer></script>
+    <script src="./orcamento/sript.js"></script>
 </head>
 
 <body>
@@ -41,7 +42,7 @@
                         <td class="item">Equipamento A com falha...</td>
                         <td class="item">ORÇADA</td>
                         <td class="item">
-                            <button onclick="mostrarOrcamento()">Aprovar/Rejeitar Serviço</button>
+                            <button onclick="mostrarOrcamento(1)">Aprovar/Rejeitar Serviço</button>
                         </td>
                     </tr>
                     <tr>
