populando payment page

--- a/maintenance/payment/index.html
+++ b/maintenance/payment/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagamento</title>
 </head>
+
 <body>
     <header>
         <div id="icon"></div>
@@ -12,24 +14,113 @@
     <main>
         <div id="container">
             <div id="product-list">
+                <div class="product">
+                    <div class="header-info">
+                        <div class="category">
+                            <h3>
+                                Categoria
+                            </h3>
+                            <p>
+                                Notebook
+                            </p>
+                        </div>
+                        <div class="description">
+                            <h3>
+                                Descrição
+                            </h3>
+                            <p>
+                                Baixei um vírus sem querer
+                            </p>
+                        </div>
+                        <button>
+                            Abrir
+                        </button>
+                    </div>
+                    <div class="dropdown-plus">
+                        <div class="price">
+                            <h3>Preço</h3>
+                            <p>R$ 100,00</p>
+                        </div>
+                        <button>
+                            Pagar Invidualmente
+                        </button>
+                    </div>
+                </div>
 
                 <div class="product">
                     <div class="header-info">
-                        <div></div>
-                        <div></div>
-                        <div></div>
+                        <div class="category">
+                            <h3>
+                                Categoria
+                            </h3>
+                            <p>
+                                Mouse
+                            </p>
+                        </div>
+                        <div class="description">
+                            <h3>
+                                Descrição
+                            </h3>
+                            <p>
+                                Led parou de funcionar
+                            </p>
+                        </div>
+                        <button>
+                            Abrir
+                        </button>
                     </div>
-                    <div>
-                        <p></p>
-                        <button></button>
+                    <div class="dropdown-plus">
+                        <div class="price">
+                            <h3>Preço</h3>
+                            <p>R$ 20,00</p>
+                        </div>
+                        <button>
+                            Pagar Invidualmente
+                        </button>
                     </div>
                 </div>
-    
+
+                <div class="product">
+                    <div class="header-info">
+                        <div class="category">
+                            <h3>
+                                Categoria
+                            </h3>
+                            <p>
+                                Desktop
+                            </p>
+                        </div>
+                        <div class="description">
+                            <h3>
+                                Descrição
+                            </h3>
+                            <p>
+                                Não liga mais
+                            </p>
+                        </div>
+                        <button>
+                            Abrir
+                        </button>
+                    </div>
+                    <div class="dropdown-plus">
+                        <div class="price">
+                            <h3>Preço</h3>
+                            <p>R$ 250,00</p>
+                        </div>
+                        <button>
+                            Pagar Invidualmente
+                        </button>
+                    </div>
+                </div>
+
             </div>
             <div id="full-payment">
                 <div>
-                    <p></p>
-                    <button></button>
+                    <div>
+                        <h3>Preço Total</h3>
+                        <p>R$ 370,00</p>
+                    </div>
+                    <button>Pagar</button>
                 </div>
             </div>
         </div>
@@ -38,4 +129,5 @@
         <div id="developers">Desenvolvido por <span>Nome da Equipe</span>.</div>
     </footer>
 </body>
+
 </html>
