--- a/maintenance/payment/index.html
+++ b/maintenance/payment/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagamento</title>
+    <link rel="stylesheet" href="../../pattern.css">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -13,6 +16,7 @@
     </header>
     <main>
         <div id="container">
+
             <div id="product-list">
                 <div class="product">
                     <div class="header-info">
@@ -116,11 +120,11 @@
             </div>
             <div id="full-payment">
                 <div>
-                    <div>
+                    <div id="header-full">
                         <h3>Preço Total</h3>
                         <p>R$ 370,00</p>
                     </div>
-                    <button>Pagar</button>
+                    <button id="pay-full">Pagar</button>
                 </div>
             </div>
         </div>
