--- a/maintenance/payment/index.html
+++ b/maintenance/payment/index.html
@@ -36,7 +36,7 @@
                                 Baixei um vírus sem querer
                             </p>
                         </div>
-                        <button>
+                        <button class="open-dropdown">
                             Abrir
                         </button>
                     </div>
@@ -69,7 +69,7 @@
                                 Led parou de funcionar
                             </p>
                         </div>
-                        <button>
+                        <button class="open-dropdown">
                             Abrir
                         </button>
                     </div>
@@ -102,7 +102,7 @@
                                 Não liga mais
                             </p>
                         </div>
-                        <button>
+                        <button class="open-dropdown">
                             Abrir
                         </button>
                     </div>
@@ -132,6 +132,18 @@
     <footer>
         <div id="developers">Desenvolvido por <span>Nome da Equipe</span>.</div>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script>
+        $('.dropdown-plus').hide();
+        $('.open-dropdown').click(function() {
+            $(this).parent().parent().find('.dropdown-plus').slideToggle();
+            $(this).text($(this).text() == 'Fechar' ? 'Abrir' : 'Fechar');
+            if($(this).text() == 'Fechar')
+            $(this).parent().css("border-radius", "10px 10px 0px 0px");
+            else
+            $(this).parent().css("border-radius", "10px 10px 10px 10px");
+        });
+    </script>
 </body>
 
 </html>
