--- a/maintenance/payment/index.html
+++ b/maintenance/payment/index.html
@@ -126,9 +126,10 @@
                         <h3>Preço Total</h3>
                         <p>R$ 370,00</p>
                     </div>
-                    <button id="pay-full">Pagar</button>
+                    <button id="pay-full" onClick="window.alert('Pago')">Pagar</button>
                 </div>
             </div>
+            <button onclick="history.back()" style="width: 50%; margin: auto;">Voltar</button>
         </div>
     </main>
     <footer>
