Ultima alteracao, um alert

--- a/maintenance/payment/index.html
+++ b/maintenance/payment/index.html
@@ -47,7 +47,7 @@
                             <h3>Preço</h3>
                             <p>R$ 100,00</p>
                         </div>
-                        <button>
+                        <button onClick="window.alert('Pago')">
                             Pagar Invidualmente
                         </button>
                     </div>
@@ -80,7 +80,7 @@
                             <h3>Preço</h3>
                             <p>R$ 20,00</p>
                         </div>
-                        <button>
+                        <button onClick="window.alert('Pago')">
                             Pagar Invidualmente
                         </button>
                     </div>
@@ -113,7 +113,7 @@
                             <h3>Preço</h3>
                             <p>R$ 250,00</p>
                         </div>
-                        <button>
+                        <button onClick="window.alert('Pago')">
                             Pagar Invidualmente
                         </button>
                     </div>
