--- a/homeCliente/orcamento/index.html
+++ b/homeCliente/orcamento/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalhes da Solicitação</title>
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../../pattern.css">
+    <script src="../src/components/Header.js" defer></script>
 </head>
 
 <body>
@@ -15,12 +17,22 @@
     <main>
         <div class="main-content">
             <h2>Detalhes da Solicitação</h2>
-            <p><strong>Descrição do Equipamento:</strong> <span id="descricaoEquipamento"></span></p>
-            <p><strong>Categoria:</strong> <span id="categoriaEquipamento"></span></p>
-            <p><strong>Defeito:</strong> <span id="descricaoDefeito"></span></p>
-            <h3><strong>Preço Orçado:</strong> <span id="precoOrcamento"></span></h3>
-            <button onclick="aprovarServico()">Aprovar Serviço</button>
-            <button onclick="rejeitarServico()">Rejeitar Serviço</button>
+            <div class="item-detail">
+                <p><strong>Descrição do Equipamento:</strong><br> <span id="descricaoEquipamento"></span></p>
+            </div>
+            <div class="item-detail">
+                <p><strong>Categoria:</strong><br> <span id="categoriaEquipamento"></span></p>
+            </div>
+            <div class="item-detail">
+                <p><strong>Defeito:</strong><br> <span id="descricaoDefeito"></span></p>
+            </div>
+            <div class="item-detail" id="div-orcamento">
+                <h3><strong>Preço Orçado:</strong><br> <span id="precoOrcamento"></span></h3>
+            </div>
+            <div class="buttons">
+                <button onclick="aprovarServico()">Aprovar Serviço</button>
+                <button onclick="rejeitarServico()">Rejeitar Serviço</button>
+            </div>
         </div>
     </main>
 
@@ -51,7 +63,7 @@
             const motivoRejeicao = prompt("Motivo da rejeição:");
             const solicitacao = JSON.parse(localStorage.getItem('solicitacao'));
 
-            solicitacao.motivoRejeicao = motivoRejeicao; 
+            solicitacao.motivoRejeicao = motivoRejeicao;
             localStorage.setItem('solicitacao', JSON.stringify(solicitacao));
             alert('Serviço Rejeitado!');
 
