servico-view pronto

--- a/homeCliente/servico-view/index.html
+++ b/homeCliente/servico-view/index.html
@@ -12,24 +12,26 @@
         rel="stylesheet">
     <link rel="stylesheet" href="/pattern.css">
     <link rel="stylesheet" href="style.css">
-    <script src=".script.js"></script>
+    <script src="script.js"></script>
+    <script src="../src/components/Header.js" defer></script>
+
 </head>
 
 <body>
     <header>
-        <div id="icon" ></div>
+        <!-- <cabeca-padrao></cabeca-padrao> -->
     </header>
 
     <main>
         <div class="main-content">
             <h1>Detalhes do Serviço</h1>
-            <p><strong>ID da Solicitação:</strong> 0000034 <span id="idSolicitacao"></span></p>
-            <p><strong>Descrição do Equipamento:</strong> Celular <span id="descricaoEquipamento"></span></p>
-            <p><strong>Categoria:</strong> Celular <span id="categoriaEquipamento"></span></p>
-            <p><strong>Defeito:</strong> Tela <span id="descricaoDefeito"></span></p>
-            <h2><strong>Preço Orçado:</strong> R$1200,00 <span id="precoOrcamento"></span></h2>
-            
-            <h1>Histórico de Passos</h1>
+            <p><strong>ID da Solicitação:</strong> <span id="idSolicitacao"></span></p>
+            <p><strong>Descrição do Equipamento:</strong> <span id="descricaoEquipamento"></span></p>
+            <p><strong>Categoria:</strong> <span id="categoriaEquipamento"></span></p>
+            <p><strong>Defeito:</strong> <span id="descricaoDefeito"></span></p>
+            <h2><strong>Preço Orçado:</strong> <span id="precoOrcamento"></span></h2>
+
+            <h3>Histórico de Passos</h3>
             <table id="historicoPassos">
                 <tr>
                     <td>Data/Hora</td>
@@ -37,35 +39,74 @@
                     <td>Descricao</td>
                 </tr>
 
-                <tr>
-                    <td>01/01/2021 12:00</td>
-                    <td>Gabriel</td>
-                    <td>Explodiu o celular</td>
-                </tr>
-
-                <tr>
-                    <td>01/01/2021 12:00</td>
-                    <td>Guerios</td>
-                    <td>Viu o celular explodido e ficou puto</td>
-                </tr>
-
-                <tr>
-                    <td>01/01/2021 12:00</td>
-                    <td>Bruno</td>
-                    <td>Brincou</td>
-                </tr>
             </table>
-           
-        <td id="buttons">
-            <button onclick="aprovarServico()">Aprovar Serviço</button>
-            <button onclick="rejeitarServico()">Rejeitar Serviço</button>
-        </td>
+
+            <td id="buttons">
+                <button onclick="aprovarServico()">Aprovar Serviço</button>
+                <button onclick="rejeitarServico()">Rejeitar Serviço</button>
+            </td>
         </div>
     </main>
 
     <footer>
         <div id="developers">Desenvolvido por <span>Nome da Equipe</span>.</div>
     </footer>
+
+
+
+    <script>
+        function carregarDetalhes() {
+            const solicitacaos = JSON.parse(localStorage.getItem('solicitacao'));
+
+            if (solicitacaos) {
+                document.getElementById('idSolicitacao').textContent = solicitacaos.idSolicitacao;
+                document.getElementById('descricaoEquipamento').textContent = solicitacaos.descricaoEquipamento;
+                document.getElementById('categoriaEquipamento').textContent = solicitacaos.categoriaEquipamento;
+                document.getElementById('descricaoDefeito').textContent = solicitacaos.descricaoDefeito;
+                document.getElementById('precoOrcamento').textContent = solicitacaos.precoOrcamento;
+            } else {
+                console.error("Nenhuma solicitação encontrada no localStorage.");
+            }
+        }
+
+
+        window.onload = carregarDetalhes;
+
+
+
+
+
+        adicionarLinhaHistorico('02/02/2022 10:00', 'Ana', 'Revisou o celular após reparo');
+        adicionarLinhaHistorico('03/03/2022 14:30', 'Lucas', 'Realizou teste de inicio');
+        adicionarLinhaHistorico('03/03/2022 14:30', 'claudia', 'Realizou teste de meio ');
+
+
+
+
+        function aprovarServico() {
+            const solicitacaos = JSON.parse(localStorage.getItem('solicitacao'));
+            const precoOrcamento = solicitacaos.precoOrcamento;
+
+            alert(`Serviço Aprovado no Valor R$ ${precoOrcamento}`);
+            localStorage.setItem('solicitacao', JSON.stringify(solicitacaos));
+
+            window.location.href = "../index.html";
+        }
+
+
+        function rejeitarServico() {
+            const motivoRejeicao = prompt("Motivo da rejeição:");
+            const solicitacaos = JSON.parse(localStorage.getItem('solicitacao'));
+
+            solicitacaos.motivoRejeicao = motivoRejeicao;
+            localStorage.setItem('solicitacao', JSON.stringify(solicitacaos));
+            alert('Serviço Rejeitado!');
+
+            window.location.href = "../index.html";
+        }
+
+
+    </script>
 </body>
 
 </html>
