--- a/homeCliente/index.html
+++ b/homeCliente/index.html
@@ -15,6 +15,7 @@
     <script src="./src/components/Header.js" defer></script>
     <script src="./src/components/NavBar.js" defer></script>
     <script src="./orcamento/sript.js"></script>
+    <script src="./servico-view/script.js"></script>
 </head>
 
 <body>
@@ -50,7 +51,9 @@
                         <td class="item">14/09/24 09:30</td>
                         <td class="item">Equipamento B com defeito...</td>
                         <td class="item">APROVADA</td>
-                        <td class="item"></td>
+                        <td class="item">
+                            <button onclick="mostrarDetalhes(1)">Visualizar Serviço</button>
+                        </td>
                     </tr>
                     <tr>
                         <td class="item">003</td>
@@ -71,7 +74,7 @@
                         </td>
                     </tr>
                 </table>
-                
+
             </div>
         </div>
     </main>
