add "componente" dinamico

--- a/employer/viewMaintenance/index.html
+++ b/employer/viewMaintenance/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visualizar Solicitacao</title>
+    <title>Visualizar Solicitação</title>
     <link rel="stylesheet" href="../../pattern.css">
     <link rel="stylesheet" href="./style.css">
+    <script src="./script.js" defer></script>
 </head>
+
 <body>
     <header>
         <div id="icon"></div>
@@ -14,7 +17,7 @@
     <main>
         <div id="container">
             <div id="header-container">
-                <h1>Visualizar Solicitacoes</h1>
+                <h1>Visualizar Solicitações</h1>
                 <div id="filters">
                     <button id="today">Hoje</button>
                     <input type="date" name="start" id="start-date">
@@ -24,46 +27,47 @@
                 </div>
             </div>
             <div id="maintenance-list">
-                    <div class="product">
-                        <div class="header-info">
-                            <div>
-                                <div class="state red"></div>
-                                <p class="state-description">Rejeitado</p>
-                            </div>
-                            <div class="category">
-                                <h3>
-                                    Categoria
-                                </h3>
-                                <p>
-                                    Notebook
-                                </p>
-                            </div>
-                            <div class="date">
-                                <h3>
-                                    Data da solicitacao
-                                </h3>
-                                <p>
-                                    12/12/2023
-                                </p>
-                            </div>
-                            <button class="open-dropdown">
-                                Abrir
-                            </button>
+                <div class="product">
+                    <div class="header-info">
+                        <div>
+                            <div class="state red"></div>
+                            <p class="state-description">Rejeitado</p>
                         </div>
-                        <div class="dropdown-plus">
-                            <div class="description">
-                                <h3>
-                                    Descrição
-                                </h3>
-                                <p>
-                                    Baixei um vírus sem querer
-                                </p>
-                                <button class="redirect-state">Rejeitado</button>
-                            </div>
+                        <div class="category">
+                            <h3>
+                                Categoria
+                            </h3>
+                            <p>
+                                Notebook
+                            </p>
+                        </div>
+                        <div class="date">
+                            <h3>
+                                Data da solicitação
+                            </h3>
+                            <p>
+                                12/12/2023
+                            </p>
+                        </div>
+                        <button class="open-dropdown">
+                            Abrir
+                        </button>
+                    </div>
+                    <div class="dropdown-plus">
+                        <div class="description">
+                            <h3>
+                                Descrição
+                            </h3>
+                            <p>
+                                Baixei um vírus sem querer
+                            </p>
+                            <button class="redirect-state">Rejeitado</button>
                         </div>
                     </div>
+                </div>
             </div>
         </div>
     </main>
 </body>
+
 </html>
