Refatorar estilo do componente de visualização de manutenção
Aprimora o estilo do componente de visualização de manutenção, adicionando cores de estado e ajustando o layout para melhorar a legibilidade e usabilidade.

--- a/employer/viewMaintenance/index.html
+++ b/employer/viewMaintenance/index.html
@@ -26,10 +26,11 @@
                     <button id="all">Todos</button>
                 </div>
             </div>
+
             <div id="maintenance-list">
                 <div class="product">
                     <div class="header-info">
-                        <div>
+                        <div class="state-info">
                             <div class="state red"></div>
                             <p class="state-description">Rejeitado</p>
                         </div>
@@ -61,11 +62,12 @@
                             <p>
                                 Baixei um vírus sem querer
                             </p>
-                            <button class="redirect-state">Rejeitado</button>
                         </div>
+                        <button class="redirect-state">Rejeitado</button>
                     </div>
                 </div>
             </div>
+
         </div>
     </main>
 </body>
