atualizacao dos dados do cliente e da solicitacao

--- a/employee/viewClient/index.html
+++ b/employee/viewClient/index.html
@@ -25,6 +25,11 @@
         <p><strong>Nome:</strong> João da Silva</p>
         <p><strong>Email:</strong> joao.silva@example.com</p>
         <p><strong>Telefone:</strong> (11) 98765-4321</p>
+        <p><strong>CPF:</strong> 11111111111</p>
+        <p><strong>CEP:</strong> 1111111111</p>
+        <p><strong>País:</strong> Brasil</p>
+        <p><strong>Estado:</strong> Paraná</p>
+        <p><strong>Cidade:</strong> Curitiba</p>
         </div>
 
         <div id="request-info">
@@ -32,6 +37,8 @@
         <p><strong>ID:</strong> 001</p>
         <p><strong>Data/Hora:</strong> 15/09/24 10:00</p>
         <p><strong>Descrição:</strong> Equipamento A com falha...</p>
+        <p><strong>Categoria:</strong> Desktop</p>
+        <p><strong>Defeito:</strong> A tela não mostra imagem</p>
         <p><strong>Estado:</strong> ORÇADA</p>
         </div>
 
