--- a/employee/viewClient/index.html
+++ b/employee/viewClient/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visualizar Solicitação</title>
     <link rel="stylesheet" href="../../pattern.css">
-    <link rel="stylesheet" href="./novo.css">
+    <link rel="stylesheet" href="./style.css">
     <script src="./script.js" defer></script>
 </head>
 
