Tela de inicio func + condicao para acesso na prototip + ajustes (RF011)

--- a/home/index.html
+++ b/home/index.html
@@ -19,10 +19,10 @@
     <header>
         <div id="icon"></div>
         <div id="login-container">
-            <a href="../login/register/">
+            <a href="../login/register/index.html">
                 <button id="register" type="button">Registrar</button>
             </a>
-            <a href="../login/">
+            <a href="../login/index.html">
                 <button id="login" type="button">Entrar</button>
             </a>
         </div>
