--- a/login/register/index.html
+++ b/login/register/index.html
@@ -19,7 +19,7 @@
     <header>
         <div id="icon"></div>
         <div id="login-container">
-            <a href="../"><div id="register">Entrar</div></a>
+            <a href="../index.html"><div id="register">Entrar</div></a>
         </div>
     </header>
     <main>
@@ -42,7 +42,7 @@
                     <input type="text" name="city" id="city" placeholder="Cidade">
                 </div>
                 <input type="text" name="address" id="address" placeholder="Endereço">
-                <a href="../../homeCliente/"><button type="button" id="register-button">Registrar</button></a>
+                <a href="../../homeCliente/index.html"><button type="button" id="register-button">Registrar</button></a>
             </form>
 
         </div>
