--- a/employer/viewMaintenance/index.html
+++ b/employer/viewMaintenance/index.html
@@ -66,7 +66,7 @@
                     </div>
                 </div>
             </div>
-
+            <button onclick="window.history.back();">Voltar</button>
         </div>
     </main>
 
