finalização das telas  Rf011 e inicio de roteamento

--- a/employee/viewMaintenance/index.html
+++ b/employee/viewMaintenance/index.html
@@ -44,9 +44,8 @@
                                 12/12/2023
                             </p>
                         </div>
-                        <button class="open-dropdown">
-                            Abrir
-                        </button>
+                        <!-- <button class="open-dropdown"> Abrir</button> -->
+                        <a href="../viewClient/index.html"> <button>Abrir</button></a>
                     </div>
                     <div class="dropdown-plus">
                         <div class="description">
@@ -61,7 +60,7 @@
                     </div>
                 </div>
             </div>
-
+            <a href="../index.html"> <button>Voltar</button></a>
         </div>
     </main>
 </body>
