--- a/employee/index.html
+++ b/employee/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="./style/style.css">
     <script src="./src/components/Header.js" defer></script>
     <script src="./src/components/NavBar.js" defer></script>
+    <script src="./viewClient/script.js" defer></script>
+    <script src="./viewMaintenance/script.js" defer></script>
 </head>
 
 <body>
@@ -41,7 +43,8 @@
                         <td class="item">João da Silva</td>
                         <td class="item">Equipamento A com falha...</td>
                         <td class="item">
-                            <button onclick="mostrarOrcamento(1)">Efetuar orçamento</button>
+                            <!--<button onclick="createProductElement(1)">Efetuar orçamento</button> -->
+                            <a href="./viewClient/index.html"> <button>Efetuar orçamento</button></a>
                         </td>
                     </tr>
                     <tr>
@@ -50,7 +53,8 @@
                         <td class="item">João da Silva</td>
                         <td class="item">Equipamento B com defeito...</td>
                         <td class="item">
-                            <button onclick="mostrarDetalhes(1)">Efetuar orçamento</button>
+                            <!-- <button onclick="mostrarDetalhes(1)">Efetuar orçamento</button>-->
+                            <a href="./viewClient/index.html"> <button>Efetuar orçamento</button></a>
                         </td>
                     </tr>
                     <tr>
@@ -59,7 +63,8 @@
                         <td class="item">João da Silva</td>
                         <td class="item">Equipamento C reiniciando...</td>
                         <td class="item">
-                            <button onclick="resgatarServico()">Efetuar orçamento</button>
+                            <!--<button onclick="resgatarServico()">Efetuar orçamento</button>-->
+                            <a href="./viewClient/index.html"> <button>Efetuar orçamento</button></a>
                         </td>
                     </tr>
                     <tr>
@@ -68,11 +73,13 @@
                         <td class="item">João da Silva</td>
                         <td class="item">Equipamento D sem energia...</td>
                         <td class="item">
-                            <button onclick="pagarServico()">Efetuar orçamento</button>
+                            <!-- <button onclick="pagarServico()">Efetuar orçamento</button>-->
+                            <a href="./viewClient/index.html"> <button>Efetuar orçamento</button></a>
                         </td>
                     </tr>
-                </table>
 
+                </table>
+                <a href="./viewMaintenance/index.html"> <button id="btnfooter">Efetuar orçamento</button></a>
             </div>
         </div>
     </main>
