--- a/employee/viewClient/index.html
+++ b/employee/viewClient/index.html
@@ -22,6 +22,7 @@
 
         <div id="client-info">
         <h2>Informações do Cliente</h2>
+        <div id="infos-tab">
         <p><strong>Nome:</strong> João da Silva</p>
         <p><strong>Email:</strong> joao.silva@example.com</p>
         <p><strong>Telefone:</strong> (11) 98765-4321</p>
@@ -31,15 +32,18 @@
         <p><strong>Estado:</strong> Paraná</p>
         <p><strong>Cidade:</strong> Curitiba</p>
         </div>
+        </div>
 
         <div id="request-info">
         <h2>Informações da Solicitação</h2>
+        <div id = "infos-tab">
         <p><strong>ID:</strong> 001</p>
         <p><strong>Data/Hora:</strong> 15/09/24 10:00</p>
         <p><strong>Descrição:</strong> Equipamento A com falha...</p>
         <p><strong>Categoria:</strong> Desktop</p>
-        <p><strong>Defeito:</strong> A tela não mostra imagem</p>
+        <p><strong>Defeito:</strong> A tela não apresenta imagem</p>
         <p><strong>Estado:</strong> ORÇADA</p>
+        </div>
         </div>
 
         <div id="budget-info">
