--- a/employee/viewMaintenance/index.html
+++ b/employee/viewMaintenance/index.html
@@ -64,6 +64,88 @@
 
         </div>
     </main>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script defer>
+        $(document).ready(function () {
+            $('#maintenance-list').on('click', '.open-dropdown', function () {
+                let dropdown = $(this).parent().siblings('.dropdown-plus');
+
+                dropdown.slideToggle(function () {
+                    if (dropdown.is(':visible')) {
+                        dropdown.css('display', 'flex');
+                    }
+                });
+
+                $(this).text($(this).text() === 'Fechar' ? 'Abrir' : 'Fechar');
+
+                if ($(this).text() === 'Fechar') {
+                    $(this).parent().css("border-radius", "10px 10px 0px 0px");
+                } else {
+                    $(this).parent().css("border-radius", "10px 10px 10px 10px");
+                }
+            });
+
+            $('.dropdown-plus').hide();
+
+            $(document).ready(function () {
+                $('#show-filter').click(function () {
+                    $(this).css('display', 'none');
+                    $('#filters').css('display', 'flex');
+                });
+
+                $('#today, #filter, #all').click(function () {
+                    $('#filters').css('display', 'none');
+                    $('#show-filter').css('display', 'block');
+                });
+
+                function convertDate(dateStr) {
+                    if (!dateStr) {
+                        console.error('Data não definida:', dateStr);
+                        return null;
+                    }
+                    const [day, month, year] = dateStr.split('/');
+                    if (!day || !month || !year) {
+                        console.error('Formato de data inválido:', dateStr);
+                        return null;
+                    }
+                    return `${year}-${month}-${day}`;
+                }
+
+                function filterByDate(startDate, endDate) {
+                $('#maintenance-list .product').each(function () {
+                    const productDateStr = $(this).find('.date p').text().trim();
+                    const productDate = convertDate(productDateStr);
+                    if (!productDate) {
+                        $(this).hide();
+                        return;
+                    }
+                    if (productDate >= startDate && productDate <= endDate) {
+                        $(this).show();
+                    } else {
+                        $(this).hide();
+                    }
+                });
+            }
+
+                $('#today').click(function () {
+                    const today = new Date().toISOString().split('T')[0];
+                    filterByDate(today, today);
+                });
+
+                $('#filter').click(function () {
+                    const startDate = $('#start-date').val();
+                    const endDate = $('#end-date').val();
+                    if (startDate && endDate) {
+                        filterByDate(startDate, endDate);
+                    }
+                });
+
+                $('#all').click(function () {
+                    $('#maintenance-list .product').show();
+                });
+            });
+        });
+    </script>
 </body>
 
 </html>
